[Qt] tst_QWebHistoryInterface::visitedLinks() fails https://bugs.webkit.org/show_bug.cgi?id=37323

Patch by Antonio Gomes  <tonikitoo@webkit.org>, Yi Shen <yi.4.shen@nokia.com> on 2010-04-28
Reviewed by NOBODY Simon Hausmann.

Patch fixes styleProperty method of QWebElement to make use of
CSSComputedStyleDeclaration::computedStyle 'allowVisitedStyle' parameter
and the corresponding failing QWebHistoryInterface::visitedLinks method.

* Api/qwebelement.cpp:
(QWebElement::styleProperty):
* tests/qwebhistoryinterface/tst_qwebhistoryinterface.cpp:
(tst_QWebHistoryInterface::visitedLinks):

Canonical link: https://commits.webkit.org/49696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58427 268f45cc-cd09-0410-ab3c-d52691b4dbfc